--- a/scikit-learn (SKlearn)/sklearn.ipynb
+++ b/scikit-learn (SKlearn)/sklearn.ipynb
@@ -118,13 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from IPython.core.display_functions import display\n",
+    "from sklearn import neighbors, metrics\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ],
    "metadata": {
     "collapsed": false,
@@ -206,9 +209,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     buying  maint  doors persons lug_boot safety  class\n0     vhigh  vhigh      2       2    small    low  unacc\n1     vhigh  vhigh      2       2    small    med  unacc\n2     vhigh  vhigh      2       2    small   high  unacc\n3     vhigh  vhigh      2       2      med    low  unacc\n4     vhigh  vhigh      2       2      med    med  unacc\n...     ...    ...    ...     ...      ...    ...    ...\n1723    low    low  5more    more      med    med   good\n1724    low    low  5more    more      med   high  vgood\n1725    low    low  5more    more      big    low  unacc\n1726    low    low  5more    more      big    med   good\n1727    low    low  5more    more      big   high  vgood\n\n[1728 rows x 7 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>buying</th>\n      <th>maint</th>\n      <th>doors</th>\n      <th>persons</th>\n      <th>lug_boot</th>\n      <th>safety</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>vhigh</td>\n      <td>vhigh</td>\n      <td>2</td>\n      <td>2</td>\n      <td>small</td>\n      <td>low</td>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>vhigh</td>\n      <td>vhigh</td>\n      <td>2</td>\n      <td>2</td>\n      <td>small</td>\n      <td>med</td>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>vhigh</td>\n      <td>vhigh</td>\n      <td>2</td>\n      <td>2</td>\n      <td>small</td>\n      <td>high</td>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>vhigh</td>\n      <td>vhigh</td>\n      <td>2</td>\n      <td>2</td>\n      <td>med</td>\n      <td>low</td>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>vhigh</td>\n      <td>vhigh</td>\n      <td>2</td>\n      <td>2</td>\n      <td>med</td>\n      <td>med</td>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1723</th>\n      <td>low</td>\n      <td>low</td>\n      <td>5more</td>\n      <td>more</td>\n      <td>med</td>\n      <td>med</td>\n      <td>good</td>\n    </tr>\n    <tr>\n      <th>1724</th>\n      <td>low</td>\n      <td>low</td>\n      <td>5more</td>\n      <td>more</td>\n      <td>med</td>\n      <td>high</td>\n      <td>vgood</td>\n    </tr>\n    <tr>\n      <th>1725</th>\n      <td>low</td>\n      <td>low</td>\n      <td>5more</td>\n      <td>more</td>\n      <td>big</td>\n      <td>low</td>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>1726</th>\n      <td>low</td>\n      <td>low</td>\n      <td>5more</td>\n      <td>more</td>\n      <td>big</td>\n      <td>med</td>\n      <td>good</td>\n    </tr>\n    <tr>\n      <th>1727</th>\n      <td>low</td>\n      <td>low</td>\n      <td>5more</td>\n      <td>more</td>\n      <td>big</td>\n      <td>high</td>\n      <td>vgood</td>\n    </tr>\n  </tbody>\n</table>\n<p>1728 rows × 7 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('car.data')\n",
+    "display(data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "outputs": [],
-   "source": [],
+   "source": [
+    "X = data[[\n",
+    "    'buying',\n",
+    "    'maint',\n",
+    "    'safety'\n",
+    "]].values\n",
+    "\n",
+    "y = data[[\n",
+    "    'class'\n",
+    "]]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([['vhigh', 'vhigh', 'low'],\n       ['vhigh', 'vhigh', 'med'],\n       ['vhigh', 'vhigh', 'high'],\n       ...,\n       ['low', 'low', 'low'],\n       ['low', 'low', 'med'],\n       ['low', 'low', 'high']], dtype=object)"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "      class\n0     unacc\n1     unacc\n2     unacc\n3     unacc\n4     unacc\n...     ...\n1723   good\n1724  vgood\n1725  unacc\n1726   good\n1727  vgood\n\n[1728 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1723</th>\n      <td>good</td>\n    </tr>\n    <tr>\n      <th>1724</th>\n      <td>vgood</td>\n    </tr>\n    <tr>\n      <th>1725</th>\n      <td>unacc</td>\n    </tr>\n    <tr>\n      <th>1726</th>\n      <td>good</td>\n    </tr>\n    <tr>\n      <th>1727</th>\n      <td>vgood</td>\n    </tr>\n  </tbody>\n</table>\n<p>1728 rows × 1 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(X)\n",
+    "display(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[3, 3, 1],\n       [3, 3, 2],\n       [3, 3, 0],\n       ...,\n       [1, 1, 1],\n       [1, 1, 2],\n       [1, 1, 0]], dtype=object)"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "le = LabelEncoder()\n",
+    "for i in range(len(X[0])):\n",
+    "    X[:, i] = le.fit_transform(X[:, i])\n",
+    "\n",
+    "display(X)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\parsa\\AppData\\Local\\Temp\\ipykernel_14160\\2781043915.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  y['class'] = y['class'].map(lable_mapping)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lable_mapping = {\n",
+    "    'unacc':0,\n",
+    "    'acc':1,\n",
+    "    'good':2,\n",
+    "    'vgood':3\n",
+    "}\n",
+    "\n",
+    "y['class'] = y['class'].map(lable_mapping)\n",
+    "y = np.array(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0]\n",
+      " [0]\n",
+      " [0]\n",
+      " ...\n",
+      " [0]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\github\\learning-python\\venv\\lib\\site-packages\\sklearn\\neighbors\\_classification.py:198: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return self._fit(X, y)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "KNeighborsClassifier(n_neighbors=25)"
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn = neighbors.KNeighborsClassifier(n_neighbors=25, weights='uniform')\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "knn.fit(X_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions:  [1 3 1 1 0 0 3 0 3 0 0 0 0 0 0 1 3 0 0 0 0 0 0 1 1 0 0 3 3 0 0 0 0 0 0 1 0\n",
+      " 0 0 0 1 0 0 0 0 1 1 0 1 2 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0\n",
+      " 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 1 0 3 1 0 0 1 0 0 1 0 1 0 0 0 0 0 0 0 0 0\n",
+      " 0 1 1 0 1 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 3 1 1 0 0 1 0 0 0 1 0 2 0 0 0\n",
+      " 0 0 0 0 1 0 3 0 0 3 1 0 0 1 0 1 1 0 0 0 0 0 1 0 0 1 3 1 1 0 0 0 0 0 0 0 0\n",
+      " 1 3 0 0 1 0 1 0 1 0 0 2 0 0 3 0 3 0 0 0 0 0 0 0 0 1 0 1 3 0 0 0 0 0 0 3 0\n",
+      " 1 1 1 0 0 0 3 1 3 0 1 0 1 1 0 1 0 0 3 0 0 0 0 0 0 0 1 0 1 0 1 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 3 3 0 0 1 0 1 0 1 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0\n",
+      " 0 0 1 0 0 0 0 3 0 1 3 0 0 0 1 0 0 0 0 0 1 0 0 0 2 1 0 0 0 0 0 0 0 1 3 0 0\n",
+      " 0 3 1 1 0 0 1 0 0 0 0 0 0]\n",
+      "accuracy:  0.7109826589595376\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = knn.predict(X_test)\n",
+    "accuracy = metrics.accuracy_score(y_test, prediction)\n",
+    "\n",
+    "print(\"predictions: \", prediction)\n",
+    "print(\"accuracy: \", accuracy)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
