--- a/scikit-learn (SKlearn)/sklearn.ipynb
+++ b/scikit-learn (SKlearn)/sklearn.ipynb
@@ -443,6 +443,357 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Support vector machine"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets\n",
+    "import numpy as np\n",
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]\n",
+      " [5.4 3.9 1.7 0.4]\n",
+      " [4.6 3.4 1.4 0.3]\n",
+      " [5.  3.4 1.5 0.2]\n",
+      " [4.4 2.9 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.1]\n",
+      " [5.4 3.7 1.5 0.2]\n",
+      " [4.8 3.4 1.6 0.2]\n",
+      " [4.8 3.  1.4 0.1]\n",
+      " [4.3 3.  1.1 0.1]\n",
+      " [5.8 4.  1.2 0.2]\n",
+      " [5.7 4.4 1.5 0.4]\n",
+      " [5.4 3.9 1.3 0.4]\n",
+      " [5.1 3.5 1.4 0.3]\n",
+      " [5.7 3.8 1.7 0.3]\n",
+      " [5.1 3.8 1.5 0.3]\n",
+      " [5.4 3.4 1.7 0.2]\n",
+      " [5.1 3.7 1.5 0.4]\n",
+      " [4.6 3.6 1.  0.2]\n",
+      " [5.1 3.3 1.7 0.5]\n",
+      " [4.8 3.4 1.9 0.2]\n",
+      " [5.  3.  1.6 0.2]\n",
+      " [5.  3.4 1.6 0.4]\n",
+      " [5.2 3.5 1.5 0.2]\n",
+      " [5.2 3.4 1.4 0.2]\n",
+      " [4.7 3.2 1.6 0.2]\n",
+      " [4.8 3.1 1.6 0.2]\n",
+      " [5.4 3.4 1.5 0.4]\n",
+      " [5.2 4.1 1.5 0.1]\n",
+      " [5.5 4.2 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.2]\n",
+      " [5.  3.2 1.2 0.2]\n",
+      " [5.5 3.5 1.3 0.2]\n",
+      " [4.9 3.6 1.4 0.1]\n",
+      " [4.4 3.  1.3 0.2]\n",
+      " [5.1 3.4 1.5 0.2]\n",
+      " [5.  3.5 1.3 0.3]\n",
+      " [4.5 2.3 1.3 0.3]\n",
+      " [4.4 3.2 1.3 0.2]\n",
+      " [5.  3.5 1.6 0.6]\n",
+      " [5.1 3.8 1.9 0.4]\n",
+      " [4.8 3.  1.4 0.3]\n",
+      " [5.1 3.8 1.6 0.2]\n",
+      " [4.6 3.2 1.4 0.2]\n",
+      " [5.3 3.7 1.5 0.2]\n",
+      " [5.  3.3 1.4 0.2]\n",
+      " [7.  3.2 4.7 1.4]\n",
+      " [6.4 3.2 4.5 1.5]\n",
+      " [6.9 3.1 4.9 1.5]\n",
+      " [5.5 2.3 4.  1.3]\n",
+      " [6.5 2.8 4.6 1.5]\n",
+      " [5.7 2.8 4.5 1.3]\n",
+      " [6.3 3.3 4.7 1.6]\n",
+      " [4.9 2.4 3.3 1. ]\n",
+      " [6.6 2.9 4.6 1.3]\n",
+      " [5.2 2.7 3.9 1.4]\n",
+      " [5.  2.  3.5 1. ]\n",
+      " [5.9 3.  4.2 1.5]\n",
+      " [6.  2.2 4.  1. ]\n",
+      " [6.1 2.9 4.7 1.4]\n",
+      " [5.6 2.9 3.6 1.3]\n",
+      " [6.7 3.1 4.4 1.4]\n",
+      " [5.6 3.  4.5 1.5]\n",
+      " [5.8 2.7 4.1 1. ]\n",
+      " [6.2 2.2 4.5 1.5]\n",
+      " [5.6 2.5 3.9 1.1]\n",
+      " [5.9 3.2 4.8 1.8]\n",
+      " [6.1 2.8 4.  1.3]\n",
+      " [6.3 2.5 4.9 1.5]\n",
+      " [6.1 2.8 4.7 1.2]\n",
+      " [6.4 2.9 4.3 1.3]\n",
+      " [6.6 3.  4.4 1.4]\n",
+      " [6.8 2.8 4.8 1.4]\n",
+      " [6.7 3.  5.  1.7]\n",
+      " [6.  2.9 4.5 1.5]\n",
+      " [5.7 2.6 3.5 1. ]\n",
+      " [5.5 2.4 3.8 1.1]\n",
+      " [5.5 2.4 3.7 1. ]\n",
+      " [5.8 2.7 3.9 1.2]\n",
+      " [6.  2.7 5.1 1.6]\n",
+      " [5.4 3.  4.5 1.5]\n",
+      " [6.  3.4 4.5 1.6]\n",
+      " [6.7 3.1 4.7 1.5]\n",
+      " [6.3 2.3 4.4 1.3]\n",
+      " [5.6 3.  4.1 1.3]\n",
+      " [5.5 2.5 4.  1.3]\n",
+      " [5.5 2.6 4.4 1.2]\n",
+      " [6.1 3.  4.6 1.4]\n",
+      " [5.8 2.6 4.  1.2]\n",
+      " [5.  2.3 3.3 1. ]\n",
+      " [5.6 2.7 4.2 1.3]\n",
+      " [5.7 3.  4.2 1.2]\n",
+      " [5.7 2.9 4.2 1.3]\n",
+      " [6.2 2.9 4.3 1.3]\n",
+      " [5.1 2.5 3.  1.1]\n",
+      " [5.7 2.8 4.1 1.3]\n",
+      " [6.3 3.3 6.  2.5]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [7.1 3.  5.9 2.1]\n",
+      " [6.3 2.9 5.6 1.8]\n",
+      " [6.5 3.  5.8 2.2]\n",
+      " [7.6 3.  6.6 2.1]\n",
+      " [4.9 2.5 4.5 1.7]\n",
+      " [7.3 2.9 6.3 1.8]\n",
+      " [6.7 2.5 5.8 1.8]\n",
+      " [7.2 3.6 6.1 2.5]\n",
+      " [6.5 3.2 5.1 2. ]\n",
+      " [6.4 2.7 5.3 1.9]\n",
+      " [6.8 3.  5.5 2.1]\n",
+      " [5.7 2.5 5.  2. ]\n",
+      " [5.8 2.8 5.1 2.4]\n",
+      " [6.4 3.2 5.3 2.3]\n",
+      " [6.5 3.  5.5 1.8]\n",
+      " [7.7 3.8 6.7 2.2]\n",
+      " [7.7 2.6 6.9 2.3]\n",
+      " [6.  2.2 5.  1.5]\n",
+      " [6.9 3.2 5.7 2.3]\n",
+      " [5.6 2.8 4.9 2. ]\n",
+      " [7.7 2.8 6.7 2. ]\n",
+      " [6.3 2.7 4.9 1.8]\n",
+      " [6.7 3.3 5.7 2.1]\n",
+      " [7.2 3.2 6.  1.8]\n",
+      " [6.2 2.8 4.8 1.8]\n",
+      " [6.1 3.  4.9 1.8]\n",
+      " [6.4 2.8 5.6 2.1]\n",
+      " [7.2 3.  5.8 1.6]\n",
+      " [7.4 2.8 6.1 1.9]\n",
+      " [7.9 3.8 6.4 2. ]\n",
+      " [6.4 2.8 5.6 2.2]\n",
+      " [6.3 2.8 5.1 1.5]\n",
+      " [6.1 2.6 5.6 1.4]\n",
+      " [7.7 3.  6.1 2.3]\n",
+      " [6.3 3.4 5.6 2.4]\n",
+      " [6.4 3.1 5.5 1.8]\n",
+      " [6.  3.  4.8 1.8]\n",
+      " [6.9 3.1 5.4 2.1]\n",
+      " [6.7 3.1 5.6 2.4]\n",
+      " [6.9 3.1 5.1 2.3]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [6.8 3.2 5.9 2.3]\n",
+      " [6.7 3.3 5.7 2.5]\n",
+      " [6.7 3.  5.2 2.3]\n",
+      " [6.3 2.5 5.  1.9]\n",
+      " [6.5 3.  5.2 2. ]\n",
+      " [6.2 3.4 5.4 2.3]\n",
+      " [5.9 3.  5.1 1.8]] [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "iris = datasets.load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "\n",
+    "print(X, y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "classes = ['Iris Setosa', 'Iris Versicolour', 'Iris Virginica']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "SVC()"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = svm.SVC()\n",
+    "model.fit(X_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC()\n",
+      "(120, 4)\n",
+      "(30, 4)\n",
+      "(120,)\n",
+      "(30,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)\n",
+    "print(y_train.shape)\n",
+    "print(y_test.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 2 2 1 1 2 1 1 2 0 2 0 2 1 1 1 1 2 0 0 2 1 2 1 0 1 0 0 0] 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(X_test)\n",
+    "acc = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "print(predictions, acc)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['Iris Virginica',\n 'Iris Virginica',\n 'Iris Virginica',\n 'Iris Virginica',\n 'Iris Versicolour',\n 'Iris Versicolour',\n 'Iris Virginica',\n 'Iris Versicolour',\n 'Iris Versicolour',\n 'Iris Virginica',\n 'Iris Setosa',\n 'Iris Virginica',\n 'Iris Setosa',\n 'Iris Virginica',\n 'Iris Versicolour',\n 'Iris Versicolour',\n 'Iris Versicolour',\n 'Iris Versicolour',\n 'Iris Virginica',\n 'Iris Setosa',\n 'Iris Setosa',\n 'Iris Virginica',\n 'Iris Versicolour',\n 'Iris Virginica',\n 'Iris Versicolour',\n 'Iris Setosa',\n 'Iris Versicolour',\n 'Iris Setosa',\n 'Iris Setosa',\n 'Iris Setosa']"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[classes[predict] for predict in predictions]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
